# kukulcan

./: README.md
debugFramework/: binParser.py  dumpParser.txt
debugFramework/debugModule/: debugModule.c  debugModule.h
gtestFramework/: build.sh
gtestFramework/test/: CMakeLists.txt  cfg.cmake
gtestFramework/test/ut/: CMakeLists.txt
gtestFramework/test/ut/component/: CMakeLists.txt
platform/: platformtypes.h
utils/: memcpy.c  memcpy.h  stringUtil.h
